# my-workflow-plus

./: .actrc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: Dockerfile  compose.db.yaml  devcontainer.json  setup.sh
.github/workflows/: ci.yml
apps/audit_log/: apps.py
apps/human_resources/: apps.py
backend/: gunicorn.conf.py  tests.py
backend/apps/audit_log/: apps.py
backend/apps/financial/: apps.py
backend/apps/human_resources/: apps.py
backend/apps/purchases/: apps.py
backend/apps/users/: models.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_occupation_taxregistration.py  0003_address.py  0004_address_unique_default_address_per_user.py
backend/apps/users/tests/: factories.py  test_address.py  test_tax_registration.py  test_users.py
backend/config/: settings.py  urls.py
config/: settings.py
docker/: Dockerfile  compose.yaml
docs/: REQUIREMENTS.md
requirements/: base-requirements.txt  dev-requirements.txt
src/apps/audit_log/: apps.py
src/apps/core/: apps.py
src/apps/financial/: apps.py
src/apps/human_resources/: apps.py
src/apps/inventory/: apps.py
src/apps/purchases/: apps.py
src/apps/sales/: apps.py
src/apps/services/: apps.py
src/config/: settings.py  wsgi.py
