[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-workflow-plus"
version = "0.1.0"
dependencies = ["Django==6.0.3", "django-environ==0.13.0", "gunicorn==25.1.0"]

[tool.black]
line-length = 120

target-version = ["py312"]

include = '\.pyi?$'
extend-exclude = '''
/(
    \.git

  | \.hg
  | \.mypy_cache
  | \.tox

  | \.venv
  | _build
  | buck-out

  | build
  | dist
)/
'''

[tool.mypy]
explicit_package_bases = true
python_version = "3.12"
# Required for Django projects:
# strict = true
mypy_path = "backend"
plugins = ["mypy_django_plugin.main"] 
ignore_missing_imports = true
exclude = [
    "node_modules",
    "__pycache__",
    ".venv",
    "migrations",
    "dist",
    "build"
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pyright]
reportArgumentType = "warning"
pythonVersion = "3.12"
include = ["backend"]
# typeCheckingMode = "strict"
exclude = [
  ".venv",
  "**/.*",
  "**/.venv*",
  "**/venv**",
  "**/node_modules",
  "**/__pycache__",
  "**/migrations",  
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
DJANGO_SETTINGS_MODULE = "config.settings"

# Ensures pytest finds test files
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# Speed up tests
addopts = "--reuse-db"

[tool.coverage.run]
source = ["backend"]
omit = ["*/migrations/*", "manage.py"]
